syntax = "proto3";

package microservice_one;

option go_package = "./grpcproto";

service MicroServiceTwoService {
    rpc MethodOne(MethodRequest) returns (MethodResponse);
    rpc MethodTwo(MethodRequest) returns (MethodResponse);
}

message MethodRequest {
    int32 method_number = 1;
    int32 wait_time = 2;
}

message MethodResponse {
    repeated string user_names = 1;
}
  